# cicd-failure-predictor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  fly.toml
.github/: dependabot.yml
.github/workflows/: backup.yml  ci.yml  retrain.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9a4b1eda2bb1_add_other_failure_to_failure_class_enum.py  af8ae9ba8ea1_initial_schema.py  c7e5a3f9b210_add_shap_explanation_to_predictions.py  d2f1a4c7e890_add_test_failure_to_failure_class_enum.py  e1a2b3c4d5e6_add_password_hash_to_users.py  f2b3c4d5e6f7_drop_predicted_image_size_mb.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  dependencies.py  policies.py  predictions.py  repositories.py  routes.py  stats.py  webhook.py
backend/app/core/: audit.py  auth.py  config.py  logging_config.py  redis_client.py  resilient_http.py  security.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/ml/: feature_builder.py  inference.py  recommendations.py
backend/app/schemas/: prediction.py
backend/app/services/: build_pipeline.py  github_actions.py  github_status.py  prediction_pipeline.py  repo_discovery.py
backend/scripts/: backfill_repo_metadata.py
backend/tests/: conftest.py  test_api_auth_flows.py  test_auth_unit.py  test_decision_logic.py  test_feature_builder.py  test_github_services.py  test_inference.py  test_inference_graceful.py  test_logging_and_headers.py  test_recommendations.py  test_recommendations_extra.py  test_repo_discovery.py  test_resilient_http.py  test_security.py  test_webhook_e2e.py
data/artifacts/v26_5class/: cause_label_encoder.joblib  feature_columns.json  model_type.json  regressor_duration.joblib  regressor_memory.joblib  risk_lgb.joblib  version.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: ClassChip.tsx  FeatureImportanceChart.tsx  RecommendationCard.tsx  RiskBadge.tsx  Sidebar.tsx  StatCard.tsx
frontend/src/pages/: AddRepository.tsx  Analytics.tsx  Login.tsx  PoliciesSettings.tsx  PredictionDetail.tsx  PredictionsList.tsx
infra/: fly-entrypoint.sh
ml/: README.md  pyproject.toml
ml/data_collection/: collect.py  failure_heuristics.py  github_client.py  holdout_repos.txt  repos.txt  repos_smoke.txt
ml/data_collection/hybrid/: README.md  __init__.py  collect_hybrid.py  patch_jobs.py  rest_enricher.py  token_pool.py
ml/features/: extract.py  transformers.py
ml/notebooks/: eda_run.py
ml/scripts/: downsample_other.py
ml/synthetic/: calibrate.py  calibration.json  distributions.py  generate.py
ml/tests/: test_failure_heuristics.py  test_features.py  test_synthetic.py  test_tune.py
ml/training/: classifier.py  data.py  regressor.py  train.py  tune.py
scripts/: backup_db.sh  demo_record.md  demo_run.py  demo_start.sh  eval_holdout.py  locustfile.py  retrain_from_feedback.py  seed_demo_features.py  seed_demo_predictions.py  seed_real_predictions.py  train_v26_5class.py
