[project]
name = "cicd-predictor-backend"
version = "0.1.0"
description = "FastAPI backend for CI/CD failure prediction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.0",
    "redis>=5.2",
    "httpx>=0.27",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "pandas>=2.2",
    "numpy>=2.1",
    "joblib>=1.4",
    "shap>=0.46",
    "optuna>=4.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "structlog>=24.4",
    "tenacity>=9.0",
    "bcrypt<4.1",
    "pyarrow>=24.0.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "SIM"]
# B008: FastAPI uses Depends()/Query()/Path() in argument defaults by design.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# conftest sets environment variables before importing app modules, so imports
# intentionally come after executable statements (E402).
"tests/conftest.py" = ["E402"]
# UP042: enum classes deliberately mix `str` + `enum.Enum` (not `StrEnum`) to keep
# Python 3.11 `str()`/serialization semantics stable across the DB enum mapping.
"app/db/models.py" = ["UP042"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
