[project]
name = "cicd-predictor-ml"
version = "0.1.0"
description = "ML pipeline for CI/CD failure prediction"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "xgboost>=2.1",
    "optuna>=4.0",
    "pandas>=2.2",
    "numpy>=2.1",
    "pyarrow>=18.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "joblib>=1.4",
    "httpx>=0.27",
    "tqdm>=4.66",
    "jupyter>=1.1",
    "shap>=0.46",
    "pyjwt[crypto]>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_collection", "synthetic", "features", "training"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
